Fix name field overflow.

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -151,8 +151,9 @@ x=5
 
 #header .userinfo {
 	position: absolute;
-	right: 0;
 	max-width: 130px;
+	right: 0;
+	overflow: hidden;
 }
 
 @media(max-width: 400px) {
